Add a few more API routes
